# skillscheck

./: Makefile  README.md  main.py  pyproject.toml
skillcheck/: cli.py  fixer.py  models.py  parser.py  tokenutil.py  validator.py
skillcheck/agents/: __init__.py  _util.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  roo.py  swival.py  windsurf.py
skillcheck/checks/: disclosure.py  quality.py
skillscheck/: mdutil.py
skillscheck/checks/: quality.py  spec.py
tests/: test_agents.py  test_disclosure.py  test_fixer.py  test_parser.py  test_quality.py  test_spec.py  test_validator.py
